--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT",
+    "deploy": "pm2 deploy production"
   },
   "dependencies": {
-    "next": "10.0.8",
-    "postcss-preset-env": "^6.7.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "mongodb": "3.6.6",
+    "next": "10.1.3",
+    "node": "16.0.0",
+    "postcss-preset-env": "6.7.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "concurrently": "^6.0.0",
     "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "pm2": "^4.5.6"
   }
 }
